z-index fix.css

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ aside {
   height: 100vh;
   top: 0;
   right: -20rem;
-  z-index: 2;
+  z-index: 99;
   text-align: center;
   padding: 2rem;
   transition: right 0.5s ease;
@@ -272,3 +272,4 @@ main{
   font-optical-sizing: auto;
   font-weight: 700;
 }
+
